syntax = "proto3";

package uas;

message Error {
  string code = 1;
  string message = 2;
}

message User {
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  bool active = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message AuthResult {
  User user = 1;
  string token = 2;
}

message AuthResponse {
  oneof response {
    AuthResult value = 1;
    Error error = 2;
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string password = 4;
}

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Register (RegisterRequest) returns (AuthResponse);
}

message UserResult {
  User user = 1;
}

message UserResponse {
  oneof response {
    UserResult value = 1;
    Error error = 2;
  }
}

service UserService {
  rpc FindById (FindUserByIdDto) returns (UserResponse);
  rpc FindByEmail (FindUserByEmailRequest) returns (UserResponse);
  rpc Update (UpdateUserByIdRequest) returns (UserResponse);
  rpc Delete (DeleteUserByIdRequest) returns (UserResponse);
}

message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByIdDto {
  string id = 1;
}

message UpdateUserByIdDto {
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string password = 4;
  bool active = 5;
}

message UpdateUserByIdRequest {
  string id = 1;
  UpdateUserByIdDto userData = 2;
}

message DeleteUserByIdRequest {
  string id = 1;
}
